--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 here is the first change
+here is the second chagne
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
