--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ here is the second chagne
 here is the fourth change
 here is the fifth change
 here is a sixth change
+This is the seventh change
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
