--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ here is the fourth change
 here is the fifth change
 here is a sixth change
 This is the seventh change
+This is the eigth change
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
